# monorepo-poc

./: .envrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  Options.cmake  conanws.yml  justfile  mypy.ini  pyproject.toml
cimaging/app/: CMakeLists.txt  conanfile.py  justfile  pyproject.toml
cimaging/app/cpp/: CMakeLists.txt
cimaging/app/cpp/apps/sample/: CMakeLists.txt  cimaging_app_sample.cpp
cimaging/app/cpp/include/cimaging/: app.h
cimaging/app/cpp/include/cimaging/app/: version.h
cimaging/app/cpp/src/: app.cpp
cimaging/app/cpp/tests/: CMakeLists.txt  cimaging_app_gtest.cpp
cimaging/app/python/: CMakeLists.txt
cimaging/app/python/bindings/: cimaging_app_bindings.cpp
cimaging/app/python/cimaging/app/: __init__.py
cmake/cpm/_/: googletest.cmake  pybind11.cmake
cmake/presets/: base.json  x86-linux-clang.json  x86-linux-gcc.json
cmake/presets/configs/: bindings.json  debug.json
cmake/presets/toolchains/: android-ndk.json
cmake/utils/: configurator.cmake  targets.cmake  version.h.in
just/: cpp.just  private.just  py.just
metavision-bar/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  pyproject.toml
metavision-bar/cmake/presets/: aarch64-android-clang.json  base.json
metavision-bar/cmake/presets/compilers/: clang.json
metavision-bar/cmake/presets/configs/: release.json
metavision-bar/cmake/utils/: add_library_version_header.cmake
metavision-bar/cpp/: CMakeLists.txt  CMakeUserPresets.json
metavision-bar/cpp/include/metavision/: bar.h
metavision-bar/cpp/include/metavision/bar/: version.h
metavision-bar/cpp/src/: bar.cpp
metavision-bar/cpp/tests/: CMakeLists.txt
metavision-base/: pyproject.toml
metavision-base/python/metavision/base/: base.py
metavision-base/python/tests/: test_metavision_base.py
metavision-foo/: CMakeLists.txt  CMakePresets.json  conanfile.py  justfile  pyproject.toml
metavision-foo/cmake/presets/compilers/: gcc.json
metavision-foo/cmake/presets/configs/: bindings.json
metavision-foo/cmake/utils/: configurator.cmake
metavision-foo/cpp/: CMakeLists.txt
metavision-foo/cpp/include/metavision/: foo.h
metavision-foo/cpp/include/metavision/foo/: version.h
metavision-foo/cpp/src/: foo.cpp
metavision-foo/cpp/tests/: CMakeLists.txt
metavision-foo/python/: CMakeLists.txt
metavision/bar/: CMakeLists.txt  conanfile.py
metavision/bar/cpp/: CMakeLists.txt
metavision/bar/cpp/tests/: CMakeLists.txt  metavision_bar_gtest.cpp
metavision/base/: pyproject.toml
metavision/base/python/metavision/base/: __init__.py  base.py
metavision/foo/: CMakeLists.txt  conanfile.py  pyproject.toml
metavision/foo/cpp/: CMakeLists.txt
metavision/foo/cpp/tests/: CMakeLists.txt  metavision_foo_gtest.cpp
metavision/foo/python/: CMakeLists.txt
metavision/foo/python/bindings/: metavision_foo_bindings.cpp
metavision/foo/python/metavision/foo/: __init__.py
pmake/: conanfile.py  pmake_configure_project.cmake  pmake_generate_version_file.cmake  pmake_target_options.cmake
