[project]
name = "metavision-foo"
dynamic = ["version"]
requires-python = ">=3.10,<4.0"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"metavision.foo" = ["*.so"]

[tool.setuptools.packages.find]
where = ["python/"]
include = ["metavision.foo"]

[tool.setuptools.dynamic]
version = {attr = "metavision.foo.__version__"}

[tool.uv.sources]
