[project]
name = "cimaging-app"
dynamic = ["version"]
requires-python = ">=3.10,<4.0"
dependencies = [
  "metavision-foo==0.0.1",
  "metavision-base==0.1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"cimaging.app" = ["*.so"]

[tool.setuptools.packages.find]
where = ["python/"]
include = ["cimaging.app"]

[tool.setuptools.dynamic]
version = {attr = "cimaging.app.__version__"}

[tool.uv.sources]
