[project]
name = "cimaging-app"
version = "0.0.1"
requires-python = ">=3.10,<4.0"
dependencies = [
  "metavision-foo==0.0.1",
  "metavision-base==0.1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"cimaging.app" = ["*.so"]

[tool.setuptools.packages.find]
where = ["python/"]
include = ["cimaging.app"]

[tool.uv.sources]
