[project]
name = "metavision-foo"
version = "0.0.1"
requires-python = ">=3.10,<4.0"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"metavision.foo" = ["*.so"]

[tool.setuptools.packages.find]
where = ["python/"]
include = ["metavision.foo"]

[tool.uv.sources]
